fixed nav on mobile

--- a/main.css
+++ b/main.css
@@ -246,3 +246,10 @@ footer a:hover {
     margin-left: 0px;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  .navbar-brand {
+    margin-right: 0;
+    font-size: 1.8rem;
+  }
+}
